# cmod

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.hpp  DirHandler.hpp  Modules.hpp
modules/window/: CMakeLists.txt
modules/window/glad/: glad.h
modules/window/window/: Callbacks.h  Colour.h  Defines.h  Renderable.h  Window.h
src/: DirHandler.cpp  Modules.cpp  main.cpp
